--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 
-   <script> window.chalice_url = "CHALICE URL GOES HERE" </script>
+   <script> window.chalice_url = "https://c5r2so4bb6.execute-api.us-east-1.amazonaws.com/api/" </script>
 
     <title>API Starter</title>
   </head>
